src/objects/Qualification_Products_List__c.object
<CustomObject>
    <description>R4 - Custom Object Qualification Products List</description>
    <fields>
        <fullName>ABB_Location_Available__c</fullName>
        <description>R4 ABB Loaction Available status</description>
        <formula>IF (  ABB_Location__c  = NULL,
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;ABB Location Not Available&quot;) &amp; &quot;ABB Location is Not Available - Please Add&quot; ,
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;ABB Location Available&quot;) &amp; &quot; ABB Location Available&quot;)</formula>
        <label>ABB Location Status</label>
        <type>Text</type>
    </fields>
 <fields>
        <fullName>ABB_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R4 ABB Location field should display only the ABB location belongs to the this  product group</description>
        <inlineHelpText>Copy the Product Group Code and Enter the Product Group Code in to the Lookup Filter Search</inlineHelpText>
        <label>ABB Location</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
            <errorMessage>Only Active ABB Locations can be added</errorMessage>
            <filterItems>
                <field>ABB_Location__c.Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Data_Load_Year__c</field>
                <operation>notEqual</operation>
                <value>2015</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value>ZC</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.DIV__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notEqual</operation>
                <value>ZCCO, ZCRE, ZCVA</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.BU__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value>Admin/Corporate, Other, R&amp;D, Warehouse or Logistics, Training</value>
            </filterItems>
            <filterItems>
                <field>ABB_Location__c.Activity__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ABB_Location__c</referenceTo>
        <relationshipLabel>Qualification Product</relationshipLabel>
        <relationshipName>Qualification_Products_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Name__c</fullName>
        <description>R4 Business Unit Name</description>
        <label>Business Unit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>R4 Business Unit</description>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Name__c</fullName>
        <description>R4 - Commercial Name</description>
        <label>Commercial Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <description>R4 Division Name</description>
        <label>Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>R4 Division</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_IsProductChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden_IsProductChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>R4 Product Group</description>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Qualification__c</fullName>
        <description>R4 - Product Qualification</description>
        <label>Product Qualification</label>
        <referenceTo>Product_Qualification__c</referenceTo>
        <relationshipName>Qualification_Products_Lists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R4 - Product lookup</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Qualification_Products_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Qualification Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QUALIF-PRD-LIST-{0000}</displayFormat>
        <label>Qualification Products List</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualification Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ABB_Location_Product_Group_Check</fullName>
        <active>false</active>
        <description>R4 ABB_Location_Product_Group_Check - Checks the value of ABB_Location__r.Product_Group__c with Product__r.Product_Group__c</description>
        <errorConditionFormula>If(ABB_Location__c  &lt;&gt;  NULL,
(If((LEFT(ABB_Location__r.Product_Group__c, 4)== Text(Product__r.Product_Group__c ) ), False, True)), False )</errorConditionFormula>
        <errorDisplayField>ABB_Location__c</errorDisplayField>
        <errorMessage>ABB Location Choosen is not supplying this product. Please choose a different one</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_End_Date_cannot_be_Past_Date</fullName>
        <active>true</active>
        <description>R4 Check the Product Qualification Target End Date cannot be entered as a past date</description>
        <errorConditionFormula>AND(NOT($User.AccountMerge_Override__c),NOT($Setup.Validation_Override__c.Account_Merge_Override__c) , Product_Qualification__r.Target_End_Date__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>The Product Qualification Target End Date cannot be entered as a past date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_Check</fullName>
        <active>true</active>
        <description>R4 Record Lock Check based on Initiative Status value</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;, IF(OR(ISPICKVAL(Product_Qualification__r.Initiative_Status__c, &quot;Closed Qualified&quot;),ISPICKVAL(Product_Qualification__r.Initiative_Status__c,&quot;Closed Not Qualified&quot;)) ,true, false))</errorConditionFormula>
        <errorMessage>You cannot save the changes as Product Qualification Status is Closed.</errorMessage>
    </validationRules>
</CustomObject>